# safety-for-agentic-ai

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE-3rd-party.txt  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose-guardrails.yaml  docker-compose.yaml  setup.sh
docs/: best-practices-model-behavior-guide.md
notebooks/: Post_Training_Eval.ipynb  README.md  Safety_Post_Training_SFT.ipynb  Step0_Setup.ipynb  Step1_Evaluation.ipynb  Step2_Safety_Post_Training.ipynb  Step3_Post_Training_Eval.ipynb  Step4_Run_Inference_with_NeMo_Guardrails_Docker.ipynb  Step4_Safety_Report_Card.ipynb  aegis_v2.ipynb  aegis_v2_judge_predictions.py  aegis_v2_score_calculation.py  aegisv2_evaluation.py  app.py  clients.py  combine_datasets.py  deepseek_sft.yaml  download_safety_dataset.py  garak_aggregate_results.py  garak_base_config.yaml  garak_vllm_eval.py  generate_on_policy_data.py  master.sh  notebook2.ipynb  run_garak.py  safety_dataset_blend_generation.py  step2_master.ipynb  utils.py  visualize_results.py  wildguard.ipynb
notebooks/configs/: deepseek_sft.yaml
notebooks/data_generation/: README.md  step_1_safety_blend_prompts_collection.ipynb  step_2_safe_on_policy_response_generation.ipynb  step_3_filter_out_unsafe_responses.ipynb
notebooks/parsers/: custom_reasoning_parser.py
notebooks/scripts/: app.py  combine_datasets.py  garak_analysis.ipynb  garak_base_config.yaml  generate_on_policy_data.py  run_garak.py  run_wildguard.py  safety_dataset_blend_generation.py  utils.py  visualize_results.py  vllm_launcher.py
(+84 files in other folders)
